--- a/app/src/main/res/layout/activity_paiement.xml
+++ b/app/src/main/res/layout/activity_paiement.xml
@@ -116,11 +116,12 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal">
             <TextView
-                android:text="Status"
+                android:text="Payement"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
             <Spinner
-                android:id="@+id/spinnerTypeProperty"
+                android:id="@+id/spinner_paiement"
+                android:background="@android:color/holo_red_light"
                 android:layout_margin="5dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -139,7 +140,7 @@
 
         <Button
             android:layout_marginTop="20sp"
-            android:id="@+id/btnSave"
+            android:id="@+id/btn_process_paiement"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Valider" />
