--- a/app/src/main/res/layout/activity_config.xml
+++ b/app/src/main/res/layout/activity_config.xml
@@ -83,5 +83,25 @@
             android:layout_height="wrap_content"
             android:text="Valider" />
 
+        <Button
+            android:layout_marginTop="10sp"
+            android:id="@+id/btnLoca"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Charger les entités" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:gravity="center"
+            android:layout_margin="20dp"
+            android:layout_gravity="center"
+            android:layout_height="wrap_content">
+            <ProgressBar
+                android:id="@+id/progressBar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:visibility="gone" />
+        </LinearLayout>
+
     </LinearLayout>
 </ScrollView>
