--- a/app/src/main/res/layout/activity_paiement.xml
+++ b/app/src/main/res/layout/activity_paiement.xml
@@ -5,141 +5,178 @@
     android:padding="16dp">
 
     <LinearLayout
+
         android:layout_width="match_parent"
-        android:layout_margin="20sp"
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
         <TextView
             android:layout_width="match_parent"
-            android:layout_height="60sp"
+            android:layout_margin="20dp"
+            android:layout_height="wrap_content"
             android:gravity="center"
-            android:layout_marginBottom="10sp"
             android:text="Paiement"
             android:textSize="24sp"
             android:textStyle="normal|bold">
         </TextView>
 
+        <TextView
+            android:text="INFORMATION COMMERCE"
+            android:padding="5dp"
+            android:textColor="@color/white"
+            android:background="@color/catalogui_blue_manoeuvre"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
         <LinearLayout
             android:padding="10dp"
+            android:background="@color/md_grey_500"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="vertical">
             <TextView
-                android:text="Prénom et nom"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-           <TextView
                 android:id="@+id/tv_nomcomplet"
+                android:textSize="18sp"
+                android:textStyle="normal|bold"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
-        </LinearLayout>
 
-        <LinearLayout
-            android:padding="10dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-            <TextView
-                android:text="Téléphone"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-            <TextView
-                android:id="@+id/tv_telephone"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:padding="10dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-            <TextView
-                android:text="Activité"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-            <TextView
-                android:id="@+id/tv_activity"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:padding="10dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-            <TextView
-                android:text="Nombre porte"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-            <TextView
-                android:id="@+id/tv_nb_porte"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-            <TextView
-                android:text="Montant"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-            <TextView
-                android:id="@+id/tv_montant"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:padding="10dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-            <TextView
-                android:text="Proprieté"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-            <TextView
-                android:id="@+id/tv_property"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-        </LinearLayout>
-
-
-        <LinearLayout
-            android:padding="10dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-            <TextView
-                android:text="Payement"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-            <Spinner
-                android:id="@+id/spinner_paiement"
-                android:background="@android:color/holo_red_light"
-                android:layout_margin="5dp"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:entries="@array/status_array" />
+                android:padding="5dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/tv_telephone1"
+                    android:layout_width="0dp"
+                    android:layout_weight="1.0"
+                    android:layout_height="wrap_content"
+                    android:textSize="16sp"
+                    android:gravity="center"
+                    android:autoLink="phone"
+                    android:visibility="gone"
+                    android:textColor="@android:color/holo_blue_dark" />
+
+
+                <TextView
+                    android:id="@+id/tv_telephone2"
+                    android:layout_width="0dp"
+                    android:layout_weight="1.0"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:autoLink="phone"
+                    android:linksClickable="true"
+                    android:visibility="gone"
+                    android:drawablePadding="8dp"
+                    android:textSize="16sp"
+                    android:textColor="@android:color/holo_blue_dark" />
+
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/tv_info"
+                android:textSize="14sp"
+                android:textStyle="normal|bold"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
         </LinearLayout>
 
 
-        <EditText
+        <TextView
+            android:text="INFORMATION TICKET"
+            android:padding="5dp"
+            android:textColor="@color/white"
+            android:layout_marginTop="20dp"
+            android:background="@color/catalogui_blue_manoeuvre"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+    <LinearLayout android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_marginTop="10dp"
+        android:layout_height="wrap_content">
+        <TextView
+            android:text="Ticket type"
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content" />
+        <Spinner
+            android:id="@+id/spinner_ticket_type"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:entries="@array/type_ticket" />
+    </LinearLayout>
+       <LinearLayout android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <TextView
+                android:text="Ticket numero"
+                android:layout_weight="1"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content" />
+            <EditText
+                android:id="@+id/tv_ticket_num"
+
+                android:layout_weight="1"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:inputType="number" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:orientation="horizontal"
+
             android:layout_margin="5dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:text="Montant"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1" />
+
+            <EditText
+                android:id="@+id/tv_montant"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:inputType="number" />
+        </LinearLayout>
+
+        <TextView
+            android:text="INFORMATION PAIEMENT"
+            android:padding="5dp"
+            android:textColor="@color/white"
+            android:layout_marginTop="20dp"
+            android:background="@color/catalogui_blue_manoeuvre"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+
+
+
+        <Spinner
+            android:id="@+id/spinner_paiement"
+            android:layout_marginTop="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:entries="@array/status_array" />
+
+        <EditText
+            android:layout_marginTop="10dp"
             android:id="@+id/tv_comment"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Commentaire"
             android:inputType="text" />
 
-
         <Button
-            android:layout_marginTop="20sp"
+            android:layout_marginTop="30dp"
             android:id="@+id/btn_process_paiement"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
