--- a/app/src/main/res/layout/activity_config.xml
+++ b/app/src/main/res/layout/activity_config.xml
@@ -90,6 +90,13 @@
             android:layout_height="wrap_content"
             android:text="Charger les entités" />
 
+        <Button
+            android:layout_marginTop="10sp"
+            android:id="@+id/btn_local"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Locale" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:gravity="center"
