--- a/app/src/main/res/layout/activity_paiement.xml
+++ b/app/src/main/res/layout/activity_paiement.xml
@@ -2,6 +2,7 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:scrollbars="vertical"
     android:padding="16dp">
 
     <LinearLayout
@@ -12,12 +13,23 @@
 
         <TextView
             android:layout_width="match_parent"
-            android:layout_margin="20dp"
+            android:layout_marginTop="20dp"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:text="Paiement"
             android:textSize="24sp"
             android:textStyle="normal|bold">
+        </TextView>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:layout_marginBottom="10dp"
+            android:text="-----"
+            android:id="@+id/gps_view"
+            android:textSize="14sp">
+
         </TextView>
 
         <TextView
@@ -68,7 +80,6 @@
                     android:autoLink="phone"
                     android:linksClickable="true"
                     android:visibility="gone"
-                    android:drawablePadding="8dp"
                     android:textSize="16sp"
                     android:textColor="@android:color/holo_blue_dark" />
 
@@ -88,7 +99,7 @@
             android:text="INFORMATION TICKET"
             android:padding="5dp"
             android:textColor="@color/white"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="10dp"
             android:background="@color/catalogui_blue_manoeuvre"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
@@ -176,7 +187,7 @@
             android:inputType="text" />
 
         <Button
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="20dp"
             android:id="@+id/btn_process_paiement"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
