--- a/app/src/main/res/layout/activity_paiement.xml
+++ b/app/src/main/res/layout/activity_paiement.xml
@@ -70,23 +70,18 @@
                     android:layout_weight="1.0"
                     android:layout_height="wrap_content"
                     android:textSize="16sp"
-                    android:gravity="center"
                     android:autoLink="phone"
-                    android:visibility="gone"
                     android:textColor="@android:color/holo_blue_dark" />
 
 
                 <TextView
-                    android:id="@+id/tv_telephone2"
+                    android:id="@+id/tv_paiement_status"
                     android:layout_width="0dp"
                     android:layout_weight="1.0"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:autoLink="phone"
-                    android:linksClickable="true"
-                    android:visibility="gone"
                     android:textSize="16sp"
-                    android:textColor="@android:color/holo_blue_dark" />
+                    android:textColor="@android:color/holo_red_dark" />
 
             </LinearLayout>
 
@@ -202,6 +197,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Valider" />
+
+
 
     </LinearLayout>
 
