--- a/app/src/main/res/layout/activity_payrecherche.xml
+++ b/app/src/main/res/layout/activity_payrecherche.xml
@@ -1,8 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
+<LinearLayout
     android:orientation="vertical"
     android:layout_width="match_parent"
-
+    android:padding="20dp"
+    android:layout_marginBottom="20dp"
     android:layout_height="match_parent">
 
     <TextView
@@ -12,9 +17,11 @@
         android:id="@+id/title_paiement"
         android:gravity="center"
         android:layout_marginBottom="10sp"
+        android:layout_marginTop="10dp"
         android:padding="10dp"
         android:text="Rechercher entity pour payer"
-        android:textSize="24sp"
+        android:textSize="18sp"
+        android:textColor="@color/white"
         android:textStyle="normal|bold">
 
     </TextView>
@@ -28,30 +35,30 @@
         android:layout_marginTop="16dp">
 
         <Button
-            android:id="@+id/btnParStatus"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Par Status"
-            android:textColor="#FFFFFF"
-            android:backgroundTint="#4CAF50" /> <!-- Vert -->
-
-        <Button
             android:id="@+id/btnParActivite"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Par Activité"
-            android:textColor="#FFFFFF"
+            android:text="Activité"
             android:backgroundTint="#2196F3" /> <!-- Bleu -->
+
+        <Button
+            android:id="@+id/btnParStatus"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Status"
+            android:textColor="#FFFFFF"
+            android:backgroundTint="#4CAF50" /> <!-- Vert -->
+
+
 
         <Button
             android:id="@+id/btnParNom"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Par nom"
-            android:textColor="#FFFFFF"
+            android:text="Nom"
             android:backgroundTint="#FF9800" /> <!-- Orange -->
 
     </LinearLayout>
@@ -68,5 +75,24 @@
         android:padding="8dp"
         android:id="@+id/expandableListView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="0dp"
+        android:dividerHeight="1dp"
+        android:layout_weight="1" />
+
+    <Button
+        android:layout_marginTop="10dp"
+        android:id="@+id/btn_recharger"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Charger" />
 </LinearLayout>
+
+    <com.gouandiaka.market.WaitingView
+        android:id="@+id/waiting_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="56dp"
+        android:visibility="gone" />
+
+
+</FrameLayout>
