--- a/app/src/main/res/layout/waiting_view.xml
+++ b/app/src/main/res/layout/waiting_view.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical"
     android:gravity="center"
     android:padding="20dp"
-    android:background="@color/blue_transparent">
+    android:background="#88107EFA">
 
     <TextView
         android:id="@+id/tv_waiting_message"
