--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,6 +15,7 @@
     <color name="catalogui_blue_manoeuvre">#ff107efa</color>
     <color name="blue_transparent">#22107efa</color>
     <color name="catalogui_blue1_manoeuvre">#AA107efa</color>
+    <color name="blue_75">#BF0000FF</color>
     <color name="md_grey_50">#FAFAFA</color>
     <color name="md_grey_700">#616161</color>
     <color name="md_grey_800">#424242</color>
