--- a/app/src/main/res/layout/waiting_view.xml
+++ b/app/src/main/res/layout/waiting_view.xml
@@ -5,16 +5,16 @@
     android:orientation="vertical"
     android:gravity="center"
     android:padding="20dp"
-    android:background="#88107EFA">
+    android:background="@color/blue_75">
 
     <TextView
         android:id="@+id/tv_waiting_message"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/waiting_message"
-        android:textSize="16sp"
+        android:textSize="18sp"
         android:textStyle="bold"
-        android:textColor="@color/traffic_ralenti"
+        android:textColor="@color/white"
         android:gravity="center"
         android:visibility="gone"
         android:paddingBottom="16dp" />
