--- a/app/src/main/res/layout/activity_paiement.xml
+++ b/app/src/main/res/layout/activity_paiement.xml
@@ -10,32 +10,46 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <LinearLayout
+
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
     <LinearLayout
 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
+        android:orientation="horizontal">
 
         <TextView
-            android:layout_width="match_parent"
-            android:layout_marginTop="20dp"
+            android:layout_width="0dp"
+            android:layout_weight="1.0"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:text="Paiement"
             android:textSize="24sp"
-            android:textStyle="normal|bold"></TextView>
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:layout_marginBottom="10dp"
-            android:text="-----"
-            android:id="@+id/gps_view"
-            android:textSize="14sp">
+            android:textStyle="normal|bold">
 
         </TextView>
 
+        <ImageView
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:id="@+id/menu_location"
+            android:src="@android:drawable/ic_menu_mylocation">
+         </ImageView>
+        <ImageView
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:id="@+id/menu_menu_direction"
+            android:src="@android:drawable/ic_menu_directions">
+        </ImageView>
+    </LinearLayout>
         <TextView
             android:text="INFORMATION COMMERCE"
             android:padding="5dp"
@@ -190,6 +204,15 @@
             android:layout_height="wrap_content"
             android:hint="Commentaire"
             android:inputType="text" />
+
+            <TextView
+                android:id="@+id/tv_time"
+                android:layout_marginTop="10dp"
+                android:visibility="gone"
+                android:textSize="12sp"
+                android:textStyle="normal|bold"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
 
         <Button
             android:layout_marginTop="20dp"
